--- a/VolunteerPortal/package.json
+++ b/VolunteerPortal/package.json
@@ -10,11 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@nuxt/icon": "^1.5.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pinia/nuxt": "^0.5.4",
+    "bcrypt": "^5.1.1",
     "firebase": "^10.13.0",
     "nuxt": "^3.13.0",
     "nuxt-vuefire": "^1.0.4",
-    "vue": "latest"
+    "vue3-toastify": "^0.2.3"
   },
   "devDependencies": {
     "daisyui": "^4.12.10"
