--- a/VolunteerPortal/package.json
+++ b/VolunteerPortal/package.json
@@ -18,8 +18,10 @@
     "@pinia/nuxt": "^0.5.4",
     "bcrypt": "^5.1.1",
     "firebase": "^10.13.0",
+    "nodemailer": "^6.9.15",
     "nuxt": "^3.13.0",
     "nuxt-vuefire": "^1.0.4",
+    "vue-multiselect": "^3.1.0",
     "vue3-toastify": "^0.2.3"
   },
   "devDependencies": {
